Add siren port shop

--- a/tools/trimming.html
+++ b/tools/trimming.html
@@ -44,6 +44,45 @@ body{height:100%;margin:0;display:grid;grid-template-columns:70% 30%;}
 				d: 1,
 			},
 		},
+		{
+			name: 'item',
+			values: {
+				x: 605,
+				y: 625,
+				w: 203,
+				h: 203,
+				a: 1,
+				b: 1,
+				c: 1,
+				d: 1,
+			},
+		},
+		{
+			name: 'siren_shop_1',
+			values: {
+				x: 598,
+				y: 646,
+				w: 204,
+				h: 204,
+				a: 1,
+				b: 1,
+				c: 1,
+				d: 1,
+			},
+		},
+		{
+			name: 'siren_shop_2',
+			values: {
+				x: 612,
+				y: 378,
+				w: 204,
+				h: 204,
+				a: 1,
+				b: 1,
+				c: 1,
+				d: 1,
+			},
+		},
 	];
 	customElements.define('drop-image', class extends HTMLElement {
 		constructor() {
